--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.8",
     "morgan": "^1.9.1",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
